--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,19 @@
     <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-       <div class="logo"><img src="./images/Logo.png" alt="logo"></div>
-       <a href="#" class="sign-btn">Sign in</a>
+        <div class="header-wrap">
+        <div class="logo">
+            <img src="./images/Logo.png" alt="logo">
+        </div>
+        <a href="#" class="sign-btn">Sign in</a>
+    </div>
     </header>
     <section class="first">
-        <div class="first text"><h1>Unlimited movies, TV<br>shows and more.</h1>
+        <div class="first text">
+            <h1>Unlimited movies, TV<br>shows and more.</h1>
             <p>Watch anywhere. Cancel anytime.</p>
         </div>
         <form>
@@ -21,12 +28,15 @@
                 <label for="email">Ready to watch? Enter your email to create or restart your membership.</label>
                 <div class="input control">
                     <input type="email" name="email" id="email" placeholder="Email address">
-                <button><p>Get started</p></button>
-            </div>
+                    <button>
+                        <p>Get started</p>
+                    </button>
+                </div>
                 <i class="fa"></i>
             </div>
-        </form> 
-        
-    </div>
+        </form>
+
+        </div>
 </body>
+
 </html>
