--- a/index.html
+++ b/index.html
@@ -12,31 +12,32 @@
 <body>
     <header>
         <div class="header-wrap">
-        <div class="logo">
-            <img src="./images/Logo.png" alt="logo">
+            <div class="logo">
+                <img src="./images/Logo.png" alt="logo">
+            </div>
+            <button><a href="#" class="sign-btn">Sign in</a></button>
         </div>
-        <a href="#" class="sign-btn">Sign in</a>
-    </div>
     </header>
     <section class="first">
-        <div class="first text">
-            <h1>Unlimited movies, TV<br>shows and more.</h1>
-            <p>Watch anywhere. Cancel anytime.</p>
-        </div>
-        <form>
-            <div class="form-control">
-                <label for="email">Ready to watch? Enter your email to create or restart your membership.</label>
-                <div class="input control">
-                    <input type="email" name="email" id="email" placeholder="Email address">
-                    <button>
-                        <p>Get started</p>
-                    </button>
-                </div>
-                <i class="fa"></i>
+        <div class="content">
+            <div class="first-text">
+                <h1>Unlimited movies, TV<br>shows and more.</h1>
+                <p>Watch anywhere. Cancel anytime.</p>
             </div>
-        </form>
-
+            <form>
+                <div class="form-control">
+                    <label for="email">Ready to watch? Enter your email to create or restart your membership.</label>
+                    <div class="input control">
+                        <input type="email" name="email" id="email" placeholder="Email address">
+                        <button>
+                            <p>Get started</p>
+                        </button>
+                    </div>
+                    <i class="fa"></i>
+                </div>
+            </form>
         </div>
+    </section>
 </body>
 
 </html>
