finished first section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="logo">
                 <img src="./images/Logo.png" alt="logo">
             </div>
-            <button><a href="#" class="sign-btn">Sign in</a></button>
+            <button class="btn"><a href="#" class="sign-btn">Sign in</a></button>
         </div>
     </header>
     <section class="first">
@@ -27,13 +27,12 @@
             <form>
                 <div class="form-control">
                     <label for="email">Ready to watch? Enter your email to create or restart your membership.</label>
-                    <div class="input control">
+                    <div class="input-control">
                         <input type="email" name="email" id="email" placeholder="Email address">
-                        <button>
-                            <p>Get started</p>
+                        <button class="btn-start">
+                            <p>Get started <img src="./images/arrow.png" class="arrow" alt="arrow"></p>
                         </button>
                     </div>
-                    <i class="fa"></i>
                 </div>
             </form>
         </div>
