wrote second section html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             </form>
         </div>
     </section>
+        <div class="tv">
+            <h1>Enjoy on your TV.</h1>
+            <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, 
+                Apple TV, Blu-ray players, and more.</p>
+            <img src="./images/tv.png" class="tv-image" alt="tv">
+        </div>
+    <section class="second">
+
+    </section>
 </body>
 
 </html>
