added third to fifth sections

--- a/index.html
+++ b/index.html
@@ -36,18 +36,44 @@
                 </div>
             </form>
         </div>
-    </section class="second">
+    </section>
+    <section class="second">
         <div class="tv">
             <div class="second-text">
                 <h1>Enjoy on your TV.</h1>
-            <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, 
-                Apple TV, Blu-ray players, and more.</p>
+                <p>Watch on Smart TVs, Playstation, Xbox, Chromecast,
+                    Apple TV, Blu-ray players, and more.</p>
             </div>
             <img src="./images/tv.png" class="tv-image" alt="tv">
         </div>
-    <section class="second">
-
     </section>
+    <section class="third">
+        <div class="mobile">
+            <img src="./images/mobile-0819.jpg" class="phone-image" alt="phone">
+            <div class="third-text">
+                <h1>Download your shows to watch offline.</h1>
+                <p>Save your favorites easily and always have something to watch.</p>
+            </div>
+        </div>
+    </section>
+    <section class="fourth">
+        <div class="combo">
+            <div class="fourth-text">
+                <h1>Watch everywhere.</h1>
+                <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</p>
+            </div>
+            <img src="./images/device-pile.png" class="combo-image" alt="combo">
+        </div>
+    </section>
+
+    <section class="fifth">
+        <div class="kids">
+            <img src="./images/kids.png" class="kids-image" alt="kids">
+            <div class="fifth-text">
+                <h1>Create profiles for kids.</h1>
+                <p>Send kids on adventures with their favorite characters in a space made just for them—free with your
+                    membership.</p>
+            </div>
 </body>
 
 </html>
