added faq section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="input-control">
                         <input type="email" name="email" id="email" placeholder="Email address">
                         <button class="btn-start">
-                            <p>Get started <img src="./images/arrow.png" class="arrow" alt="arrow"></p>
+                            <p>Get started <img src="./images/arrow.png" class="arrow"></p>
                         </button>
                     </div>
                 </div>
@@ -74,6 +74,49 @@
                 <p>Send kids on adventures with their favorite characters in a space made just for them—free with your
                     membership.</p>
             </div>
+        </div>
+    </section>
+    <section class="faq">
+        <div class="asks">
+            <div class="title">
+                <h1>Frequently Asked Questions</h1>
+            </div>
+            <div class="questions">
+                <button class="faq-btn">What is Netflix?
+                    <ion-icon name="add" class="add"></ion-icon>  
+                </button>
+                <button class="faq-btn">How much does Netflix cost?
+                    <ion-icon name="add" class="add"></ion-icon>  
+                </button>
+                <button class="faq-btn">Where can I watch?
+                    <ion-icon name="add" class="add"></ion-icon>  
+                </button>
+                <button class="faq-btn">How do I cancel?
+                    <ion-icon name="add" class="add"></ion-icon>  
+                </button>
+                <button class="faq-btn">What can I watch on Netflix?
+                    <ion-icon name="add" class="add"></ion-icon>  
+                </button>
+                <button class="faq-btn">Is Netflix good for kids?
+                    <ion-icon name="add" class="add"></ion-icon>  
+                </button>      
+            </div>
+            <form>
+                <div class="form-control mail">
+                    <label for="email">Ready to watch? Enter your email to create or restart your membership.</label>
+                    <div class="input-control">
+                        <input type="email" name="email" id="email" placeholder="Email address">
+                        <button class="btn-start">
+                            <p>Get started <img src="./images/arrow.png" class="arrow"></p>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
