added quick links section

--- a/index.html
+++ b/index.html
@@ -83,23 +83,23 @@
             </div>
             <div class="questions">
                 <button class="faq-btn">What is Netflix?
-                    <ion-icon name="add" class="add"></ion-icon>  
+                    <ion-icon name="add" class="add"></ion-icon>
                 </button>
                 <button class="faq-btn">How much does Netflix cost?
-                    <ion-icon name="add" class="add"></ion-icon>  
+                    <ion-icon name="add" class="add"></ion-icon>
                 </button>
                 <button class="faq-btn">Where can I watch?
-                    <ion-icon name="add" class="add"></ion-icon>  
+                    <ion-icon name="add" class="add"></ion-icon>
                 </button>
                 <button class="faq-btn">How do I cancel?
-                    <ion-icon name="add" class="add"></ion-icon>  
+                    <ion-icon name="add" class="add"></ion-icon>
                 </button>
                 <button class="faq-btn">What can I watch on Netflix?
-                    <ion-icon name="add" class="add"></ion-icon>  
+                    <ion-icon name="add" class="add"></ion-icon>
                 </button>
                 <button class="faq-btn">Is Netflix good for kids?
-                    <ion-icon name="add" class="add"></ion-icon>  
-                </button>      
+                    <ion-icon name="add" class="add"></ion-icon>
+                </button>
             </div>
             <form>
                 <div class="form-control mail">
@@ -115,8 +115,43 @@
         </div>
     </section>
 
+    <section class="last">
+        <div class="footer">
+        <div class="contact">
+            <p><a href="#">Questions? Call 800-850-1262</a></p>
+        </div>
+        <div class="quick-links">
+            <div class="first-col">
+                <p><a href="#">FAQ</a></p>
+                <p><a href="#">Investor Relations</a></p>
+                <p><a href="#">Ways to Watch</a></p>
+                <p><a href="#">Corporate Information</a></p>
+                <p><a href="#">Only on Netflix</a></p>
+            </div>
+            <div class="second-col">
+                <p><a href="#">Help Center</a></p>
+                <p><a href="#">Jobs</a></p>
+                <p><a href="#">Terms of Use</a></p>
+                <p><a href="#">Contact Us</a></p>
+            </div>
+            <div class="second-col">
+                <p><a href="#">Account</a></p>
+                <p><a href="#">Reedeem Gift Cards</a></p>
+                <p><a href="#">Privacy</a></p>
+                <p><a href="#">Speed Test</a></p>
+            </div>
+            <div class="second-col">
+                <p><a href="#">Media Center</a></p>
+                <p><a href="#">Buy Gift Cards</a></p>
+                <p><a href="#">Cookie Preferences</a></p>
+                <p><a href="#">Legal Notices</a></p>
+            </div>
+        </div>
+    </div>
+    </section>
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
